# prduction-system-for-anomaly-detection

./: .gitignore  .pdm.toml  common.py  core.py  dependency_graph.dot  main.py  pyproject.toml  run_fastapi.py  utils.py  ws_interfaces.py
data/: __init__.py  _singleton.py
decsion_maker/: __init__.py
documentation/: Makeflle  main.out  main.tex
documentation/img/: system_architecture.puml
documentation/inc/: 0-bibliography.tex  0-intro.tex  1-architecture.tex  2-function.tex  preamble.tex  titlepage.tex
example_data/: rules.json
io_module/: __init__.py
rules/: __init__.py
user_interfaces/: __init__.py  user_interface.py
web_client/: package-lock.json  package.json  pnpm-lock.yaml
web_client/public/: index.html
web_client/src/: App.css  App.tsx
web_client/src/client/: index.ts
web_client/src/compnens/styled-input-base/: index.tsx
web_client/src/components/search/: index.tsx  search-icon-wrapper.tsx  search.tsx
