[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Boris Bredikhin", email = "boris00043@yandex.ru"},
]
dependencies = [
    "uvicorn",
    "fastapi",
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
