[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Boris Bredikhin", email = "boris00043@yandex.ru"},
]
dependencies = [
    "uvicorn>=0.16.0",
    "fastapi",
    "websockets",
]
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
